Bug 249961 - Duplicate security in new investment account
Summary: Duplicate security in new investment account
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 03:25 UTC by Toan
Modified: 2010-09-03 04:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toan 2010-09-03 03:25:54 UTC
Version:           4.5 (using KDE 4.5.0) 
OS:                Linux


I thought this problem is solved in KMM2 but it's showing up again in KMM4. I
have 2 investment accounts. I enter transaction involving, for e.g. IBM stock, on one account. Then in the second account, I want to enter another
transaction with IBM stocks. KMM4 forces me to creat another secutity
IBM. Both shows up in the security list.

How do I force KMM4 to reuse IBM security I entered previously?

I enter everything exactly same (using cut and paste). I use
Tab to move between entries... KMM4 still insist on creat a new security.

FYI, I have Kubuntu Lucid (10.04). I use binary KMM4 from the Clay
Weber repository.



Reproducible: Always




OS: Linux (x86_64) release 2.6.32-24-generic
Compiler: cc
Comment 1 Alvaro Soliverez 2010-09-03 03:37:04 UTC
SVN commit 1171189 by asoliverez:

Fixed signal to detect duplicate securities and the field to store the type of a new security

BUG:249961

 M  +1 -1      kinvestmentdetailswizardpage.cpp  
 M  +4 -0      kinvestmentdetailswizardpage.h  
 M  +3 -3      kinvestmenttypewizardpage.cpp  
 M  +2 -0      knewinvestmentwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171189
Comment 2 Alvaro Soliverez 2010-09-03 04:25:38 UTC
SVN commit 1171221 by asoliverez:

Ported to stable branch

BUG:249961

 M  +1 -1      kinvestmentdetailswizardpage.cpp  
 M  +4 -0      kinvestmentdetailswizardpage.h  
 M  +3 -3      kinvestmenttypewizardpage.cpp  
 M  +2 -0      knewinvestmentwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171221