Fixed signal to detect duplicate securities and the field to store the type of a new security

BUG:249961

svn path=/trunk/extragear/office/kmymoney/; revision=1171189